# Nexa_Research_Agent

./: Dockerfile  LICENSE  PRICING.md  README.md  config.py  doc.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  setup.py
Nexa_Deep_Research_Agent/: LICENSE  README.md  config.py  doc.md  main.py  pyproject.toml  requirements.txt  setup.py
Nexa_Deep_Research_Agent/api/: deps.py  routes.py
Nexa_Deep_Research_Agent/core/: cache.py  planner.py  research.py  summarizer.py
Nexa_Deep_Research_Agent/frontend/: index.html
Nexa_Deep_Research_Agent/schemas/: query.py
Nexa_Deep_Research_Agent/services/: exa_client.py  helix_client.py  openrouter_client.py  user_service.py
api/: routes.py
core/: cache.py
frontend/: index.html
schemas/: query.py
services/: exa_client.py  helix_client.py  openrouter_client.py  user_service.py
